--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,54 @@
-header {
+.center {
+  margin: 0px auto;
+  width: 1200px; }
+
+/*                                            header style   */
+.header {
   border: 1px solid #000;
+  min-height: 500px;
   font-size: 20px; }
+  .header__wrapper {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[12];
+    grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows: minmax(100px, auto); }
+  .header__logo {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1/3;
+    border: 1px solid #000; }
+  .header__menu {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 8;
+    grid-column: 3/11;
+    border: 1px solid #000; }
+  .header__social {
+    -ms-grid-column: 11;
+    -ms-grid-column-span: 2;
+    grid-column: 11/13;
+    border: 1px solid #000; }
+  .header__title {
+    -ms-grid-column: 4;
+    -ms-grid-column-span: 6;
+    grid-column: 4/10;
+    border: 1px solid #000; }
+
+/*                                            main style   */
+main {
+  border: 1px solid #000; }
+
+.agencies {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 500px; }
+  .agencies__info {
+    border: 1px solid #000; }
+  .agencies__img {
+    border: 1px solid #000; }
+
+/*                                            footer style   */
+footer {
+  border: 1px solid #000; }
