Add responsive Mobile version and PC version

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,60 +1,230 @@
+
+$breakpoint-xs: 0;
+$breakpoint-sm: 576px;
+$breakpoint-md: 768px;
+$breakpoint-lg: 992px;
+$breakpoint-xl: 1200px;
+
+
+//-----------------------------------Variables
+$blue: #2962ff;
+$dark-blue: #0039cb;
+$light-blue: #768fff;
+$grey: #212121;
+$light-grey: #bdbdbd;
+$white: #fff;
+$black: #000;
+
+$Space: 20px;
+
+* {
+  box-sizing: border-box;
+}
 body{
+
 }
 
-.center {
-  margin:0px auto;
-  width: 1200px;
-}
-/*                                            header style   */
+/*---------------------------------header style----------------------------------------*/
 .header {
-  border: 1px solid #000;
-  min-height: 500px;
-  font-size: 20px;
-
-  &__wrapper{
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-auto-rows: minmax(100px, auto);
-
+  background-image: url("../img/background_img_1.jpg");
+  background-repeat: no-repeat;
+  &__menu {
+    ul {
+      list-style:none;
+    }
   }
   &__logo {
-    grid-column: 1/3;
-    border: 1px solid #000;
-  }
-  &__menu {
-    grid-column: 3/11;
-    border: 1px solid #000;
-  }
-  &__social {
-    grid-column: 11/13;
-    border: 1px solid #000;
-  }
-  &__title {
-    grid-column: 4/10;
-    border: 1px solid #000;
-
+    img {
+      width:100%;
+    }
   }
 }
-/*                                            main style   */
+/*--------------------------------------main style--------------------------------------*/
 main {
-  border: 1px solid #000;
+
 }
 
 .agencies {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: 500px;
 
   &__info {
-    border: 1px solid #000;
+    background-image: url("../img/image_back_1.jpg");
+    background-repeat: no-repeat;
+  }
+  &-background {
+    background-color: $white;
+    opacity: 0.8;
+    height: 100%;
+    padding: 70px;
   }
   &__img {
-    border: 1px solid #000;
+    img{ width: 100%;}
 
   }
 }
 
-/*                                            footer style   */
+.menus {
+  display: grid;
+  padding: 50px 0;
+  text-align: center;
+}
+
+/*-----------------------------------------footer style----------------------------------*/
 footer {
-  border: 1px solid #000;
+  min-height: 300px;
+  background-color: $black;
+  padding: 50px 0;
+  color: $white;
+}
+.footer {
+  &__wrapper {
+    display: grid;
+    div {
+      border: 1px solid $white;
+    }
+  }
+}
+
+/*----------------------------------------MEDIA SCREEN mobile----------------------------*/
+@media (max-width: 599px) {
+  #myLinks {
+    display: none;
+  }
+  .header {
+    background-size: cover;
+    min-height: 350px;
+    &__wrapper{
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      grid-template-rows: repeat (2,1fr);
+    }
+    &__logo {
+      grid-column: 1/4;
+      grid-row: 1/2;
+    }
+    &__menu {
+      grid-column: 1/13;
+      border: 1px solid #000;
+      grid-row: 2/3;
+    }
+    &__social {
+      grid-column: 5/10;
+      border: 1px solid #000;
+      grid-row: 1/2;
+      padding: 17px;
+    }
+    &__title {
+      grid-column: 2/12;
+      border: 1px solid #000;
+
+    }
+    &__icon {
+      position: absolute;
+      right:0px;
+      top:0px;
+      border: 1px solid #000;
+      padding: 20px;
+      margin:10px;
+    }
+  }
+//-------------------------------------------AGENCIES--------
+  .agencies {
+    margin-top: -120px;
+  }
+}
+
+/*-----------------------------------media screen tablet------------------------*/
+@media (min-width:600px) and (max-width: 920px) {
+
+}
+
+/*----------------------------------media screen pc normal-------------------------*/
+@media (min-width:921px) {
+
+  .center {
+    margin:0px auto;
+    width: 1200px;
+  }
+  .header {
+    min-height: 940px;
+    &__wrapper{
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      grid-auto-rows: minmax(100px, auto);
+    }
+    &__logo {
+      grid-column: 1/3;
+    }
+    &__menu {
+      grid-column: 3/11;
+      ul {
+        padding: 50px 0;
+        text-align: center;
+      }
+      li{
+        display: inline-block;
+        padding: 20px 10px;
+      }
+      a {
+        color: $white;
+        margin: 5px 5px;
+        text-decoration: none;
+      }
+    }
+    &__social {
+      grid-column: 11/13;
+      padding: 60px 0 0 90px;
+      .fb {
+        margin-right: 20px;
+      }
+    }
+    &__title {
+      grid-column: 4/10;
+      grid-row: 4/6;
+      text-align: center;
+      color: $white;
+      text-shadow: 1px 1px 20px black;
+      p {
+        text-decoration: underline;
+      }
+      h2 {
+        font-size: 40px;
+      }
+    }
+    &__icon {
+      display: none;
+    }
+  }
+//---------------------------------------AGENCIES------------
+  .agencies {
+    margin-top: -120px;
+    box-shadow: 0 0 20px $black;
+    &__info {
+      text-align: center;
+    }
+    &__img {
+
+    }
+  }
+//-------------------------------------MENUS----------------
+  .menus {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+    div {
+      border: 1px solid $light-grey;
+    }
+  }
+//----------------------------------------FOOTER-------------
+  .footer {
+    &__wrapper {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+  }
+
+}
+/*-----------------------------------media screen pc larg--------------------------*/
+@media (min-width: 1201px) {
+
 }
