--- a/css/styles.css
+++ b/css/styles.css
@@ -1,54 +1,176 @@
-.center {
-  margin: 0px auto;
-  width: 1200px; }
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box; }
 
-/*                                            header style   */
+/*---------------------------------header style----------------------------------------*/
 .header {
-  border: 1px solid #000;
-  min-height: 500px;
-  font-size: 20px; }
-  .header__wrapper {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (1fr)[12];
-    grid-template-columns: repeat(12, 1fr);
-    grid-auto-rows: minmax(100px, auto); }
-  .header__logo {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1/3;
-    border: 1px solid #000; }
-  .header__menu {
-    -ms-grid-column: 3;
-    -ms-grid-column-span: 8;
-    grid-column: 3/11;
-    border: 1px solid #000; }
-  .header__social {
-    -ms-grid-column: 11;
-    -ms-grid-column-span: 2;
-    grid-column: 11/13;
-    border: 1px solid #000; }
-  .header__title {
-    -ms-grid-column: 4;
-    -ms-grid-column-span: 6;
-    grid-column: 4/10;
-    border: 1px solid #000; }
+  background-image: url("../img/background_img_1.jpg");
+  background-repeat: no-repeat; }
+  .header__menu ul {
+    list-style: none; }
+  .header__logo img {
+    width: 100%; }
 
-/*                                            main style   */
-main {
-  border: 1px solid #000; }
-
+/*--------------------------------------main style--------------------------------------*/
 .agencies {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[2];
-  grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: 500px; }
+  grid-template-columns: repeat(2, 1fr); }
   .agencies__info {
-    border: 1px solid #000; }
-  .agencies__img {
-    border: 1px solid #000; }
+    background-image: url("../img/image_back_1.jpg");
+    background-repeat: no-repeat; }
+  .agencies-background {
+    background-color: #fff;
+    opacity: 0.8;
+    height: 100%;
+    padding: 70px; }
+  .agencies__img img {
+    width: 100%; }
 
-/*                                            footer style   */
+.menus {
+  display: -ms-grid;
+  display: grid;
+  padding: 50px 0;
+  text-align: center; }
+
+/*-----------------------------------------footer style----------------------------------*/
 footer {
-  border: 1px solid #000; }
+  min-height: 300px;
+  background-color: #000;
+  padding: 50px 0;
+  color: #fff; }
+
+.footer__wrapper {
+  display: -ms-grid;
+  display: grid; }
+  .footer__wrapper div {
+    border: 1px solid #fff; }
+
+/*----------------------------------------MEDIA SCREEN mobile----------------------------*/
+@media (max-width: 599px) {
+  #myLinks {
+    display: none; }
+  .header {
+    background-size: cover;
+    min-height: 350px; }
+    .header__wrapper {
+      display: -ms-grid;
+      display: grid;
+      -ms-grid-columns: (1fr)[12];
+      grid-template-columns: repeat(12, 1fr);
+      -ms-grid-rows: repeat 2, 1fr;
+      grid-template-rows: repeat 2, 1fr; }
+    .header__logo {
+      -ms-grid-column: 1;
+      -ms-grid-column-span: 3;
+      grid-column: 1/4;
+      -ms-grid-row: 1;
+      -ms-grid-row-span: 1;
+      grid-row: 1/2; }
+    .header__menu {
+      -ms-grid-column: 1;
+      -ms-grid-column-span: 12;
+      grid-column: 1/13;
+      border: 1px solid #000;
+      -ms-grid-row: 2;
+      -ms-grid-row-span: 1;
+      grid-row: 2/3; }
+    .header__social {
+      -ms-grid-column: 5;
+      -ms-grid-column-span: 5;
+      grid-column: 5/10;
+      border: 1px solid #000;
+      -ms-grid-row: 1;
+      -ms-grid-row-span: 1;
+      grid-row: 1/2;
+      padding: 17px; }
+    .header__title {
+      -ms-grid-column: 2;
+      -ms-grid-column-span: 10;
+      grid-column: 2/12;
+      border: 1px solid #000; }
+    .header__icon {
+      position: absolute;
+      right: 0px;
+      top: 0px;
+      border: 1px solid #000;
+      padding: 20px;
+      margin: 10px; }
+  .agencies {
+    margin-top: -120px; } }
+
+/*-----------------------------------media screen tablet------------------------*/
+/*----------------------------------media screen pc normal-------------------------*/
+@media (min-width: 921px) {
+  .center {
+    margin: 0px auto;
+    width: 1200px; }
+  .header {
+    min-height: 940px; }
+    .header__wrapper {
+      display: -ms-grid;
+      display: grid;
+      -ms-grid-columns: (1fr)[12];
+      grid-template-columns: repeat(12, 1fr);
+      grid-auto-rows: minmax(100px, auto); }
+    .header__logo {
+      -ms-grid-column: 1;
+      -ms-grid-column-span: 2;
+      grid-column: 1/3; }
+    .header__menu {
+      -ms-grid-column: 3;
+      -ms-grid-column-span: 8;
+      grid-column: 3/11; }
+      .header__menu ul {
+        padding: 50px 0;
+        text-align: center; }
+      .header__menu li {
+        display: inline-block;
+        padding: 20px 10px; }
+      .header__menu a {
+        color: #fff;
+        margin: 5px 5px;
+        text-decoration: none; }
+    .header__social {
+      -ms-grid-column: 11;
+      -ms-grid-column-span: 2;
+      grid-column: 11/13;
+      padding: 60px 0 0 90px; }
+      .header__social .fb {
+        margin-right: 20px; }
+    .header__title {
+      -ms-grid-column: 4;
+      -ms-grid-column-span: 6;
+      grid-column: 4/10;
+      -ms-grid-row: 4;
+      -ms-grid-row-span: 2;
+      grid-row: 4/6;
+      text-align: center;
+      color: #fff;
+      text-shadow: 1px 1px 20px black; }
+      .header__title p {
+        text-decoration: underline; }
+      .header__title h2 {
+        font-size: 40px; }
+    .header__icon {
+      display: none; }
+  .agencies {
+    margin-top: -120px;
+    -webkit-box-shadow: 0 0 20px #000;
+    box-shadow: 0 0 20px #000; }
+    .agencies__info {
+      text-align: center; }
+  .menus {
+    -ms-grid-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px; }
+    .menus div {
+      border: 1px solid #bdbdbd; }
+  .footer__wrapper {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr; } }
+
+/*-----------------------------------media screen pc larg--------------------------*/
