--- a/css/styles.css
+++ b/css/styles.css
@@ -14,17 +14,10 @@
 /*--------------------------------------main style--------------------------------------*/
 .agencies {
   display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[2];
-  grid-template-columns: repeat(2, 1fr); }
+  display: grid; }
   .agencies__info {
     background-image: url("../img/image_back_1.jpg");
     background-repeat: no-repeat; }
-  .agencies-background {
-    background-color: #fff;
-    opacity: 0.8;
-    height: 100%;
-    padding: 70px; }
   .agencies__img img {
     width: 100%; }
 
@@ -49,8 +42,8 @@ footer {
 
 /*----------------------------------------MEDIA SCREEN mobile----------------------------*/
 @media (max-width: 599px) {
-  #myLinks {
-    display: none; }
+  header, main, footer {
+    padding: 0 10px; }
   .header {
     background-size: cover;
     min-height: 350px; }
@@ -72,10 +65,23 @@ footer {
       -ms-grid-column: 1;
       -ms-grid-column-span: 12;
       grid-column: 1/13;
-      border: 1px solid #000;
       -ms-grid-row: 2;
       -ms-grid-row-span: 1;
       grid-row: 2/3; }
+      .header__menu ul {
+        padding: 0px; }
+      .header__menu li {
+        padding: 5px; }
+      .header__menu li:hover {
+        background-color: #bdbdbd;
+        opacity: 0.1; }
+      .header__menu a {
+        display: block; }
+      .header__menu li a:hover {
+        color: #fff;
+        text-decoration: none; }
+      .header__menu i {
+        padding-right: 20px; }
     .header__social {
       -ms-grid-column: 5;
       -ms-grid-column-span: 5;
@@ -95,10 +101,31 @@ footer {
       right: 0px;
       top: 0px;
       border: 1px solid #000;
-      padding: 20px;
-      margin: 10px; }
+      padding: 5px 20px;
+      opacity: 0.8;
+      color: #2962ff;
+      font-size: 46px; }
   .agencies {
-    margin-top: -120px; } }
+    margin-top: -70px;
+    display: -ms-grid;
+    display: grid; }
+    .agencies__img {
+      display: none; }
+    .agencies__info {
+      background-image: url(../img/image_1.jpg);
+      background-size: cover;
+      width: 100%;
+      padding: 20px;
+      color: #fff;
+      text-align: center;
+      margin-bottom: 10px;
+      min-height: 250px; }
+    .agencies__info2 {
+      background-image: url(../img/image_2.jpg); }
+  .menus__part {
+    width: 100%; }
+  .menus img {
+    width: 70%; } }
 
 /*-----------------------------------media screen tablet------------------------*/
 /*----------------------------------media screen pc normal-------------------------*/
@@ -157,8 +184,15 @@ footer {
       display: none; }
   .agencies {
     margin-top: -120px;
+    -ms-grid-columns: (1fr)[2];
+    grid-template-columns: repeat(2, 1fr);
     -webkit-box-shadow: 0 0 20px #000;
     box-shadow: 0 0 20px #000; }
+    .agencies-background {
+      background-color: #fff;
+      opacity: 0.8;
+      height: 100%;
+      padding: 70px; }
     .agencies__info {
       text-align: center; }
   .menus {
