--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,12 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Pattaya', sans-serif; }
+
+p, span, a, li {
+  font-family: 'Arsenal', sans-serif; }
+
 /*---------------------------------header style----------------------------------------*/
 .header {
   background-image: url("../img/background_img_1.jpg");
