--- a/css/styles.css
+++ b/css/styles.css
@@ -43,8 +43,6 @@ footer {
 .footer__wrapper {
   display: -ms-grid;
   display: grid; }
-  .footer__wrapper div {
-    border: 1px solid #fff; }
 
 /*----------------------------------------MEDIA SCREEN mobile----------------------------*/
 @media (max-width: 599px) {
@@ -79,7 +77,7 @@ footer {
       .header__menu li {
         padding: 5px; }
       .header__menu li:hover {
-        background-color: #bdbdbd;
+        background-color: #616161;
         opacity: 0.1; }
       .header__menu a {
         display: block; }
@@ -164,12 +162,22 @@ footer {
       .header__menu a {
         color: #fff;
         margin: 5px 5px;
-        text-decoration: none; }
+        text-decoration: none;
+        font-size: 20px; }
+      .header__menu a:hover {
+        color: #2962ff;
+        border-bottom: 1px solid #2962ff; }
+      .header__menu i {
+        display: none; }
     .header__social {
       -ms-grid-column: 11;
       -ms-grid-column-span: 2;
       grid-column: 11/13;
       padding: 60px 0 0 90px; }
+      .header__social i {
+        color: #fff; }
+      .header__social i:hover {
+        color: #2962ff; }
       .header__social .fb {
         margin-right: 20px; }
     .header__title {
@@ -183,9 +191,10 @@ footer {
       color: #fff;
       text-shadow: 1px 1px 20px black; }
       .header__title p {
-        text-decoration: underline; }
+        text-decoration: underline;
+        font-size: 24px; }
       .header__title h2 {
-        font-size: 40px; }
+        font-size: 58px; }
     .header__icon {
       display: none; }
   .agencies {
@@ -207,6 +216,30 @@ footer {
     grid-gap: 20px; }
     .menus div {
       border: 1px solid #bdbdbd; }
+    .menus h3 {
+      margin: 40px 0 20px 0;
+      color: #424242; }
+    .menus p {
+      margin: 0 20px 40px 20px;
+      color: #616161;
+      font-weight: 600; }
+    .menus img {
+      width: 100%; }
+  .contact {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr; }
+    .contact__map {
+      border: 1px solid #000; }
+      .contact__map iframe {
+        width: 100%; }
+    .contact__info {
+      border: 1px solid #000;
+      background-image: url("../img/info_img.jpg");
+      background-size: cover; }
+      .contact__info div {
+        background-color: #000; }
   .footer__wrapper {
     display: -ms-grid;
     display: grid;
