--- a/css/styles.css
+++ b/css/styles.css
@@ -208,8 +208,16 @@ footer {
       opacity: 0.8;
       height: 100%;
       padding: 70px; }
+    .agencies__info:hover {
+      text-decoration: none; }
     .agencies__info {
       text-align: center; }
+      .agencies__info h3 {
+        color: #424242;
+        font-size: 40px; }
+      .agencies__info p {
+        color: #616161;
+        font-size: 24px; }
   .menus {
     -ms-grid-columns: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
@@ -230,12 +238,9 @@ footer {
     display: grid;
     -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr; }
-    .contact__map {
-      border: 1px solid #000; }
-      .contact__map iframe {
-        width: 100%; }
+    .contact__map iframe {
+      width: 100%; }
     .contact__info {
-      border: 1px solid #000;
       background-image: url("../img/info_img.jpg");
       background-size: cover; }
       .contact__info div {
@@ -244,6 +249,17 @@ footer {
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr; } }
+    grid-template-columns: 1fr 1fr 1fr; }
+  .page-menu {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+    text-align: center;
+    margin: 40px 0; }
+    .page-menu__div {
+      border: 1px solid #424242;
+      padding: 10px; } }
 
 /*-----------------------------------media screen pc larg--------------------------*/
