--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -272,8 +272,20 @@ footer {
       height: 100%;
       padding: 70px;
     }
+    &__info:hover {
+      text-decoration: none;
+    }
     &__info {
       text-align: center;
+
+      h3 {
+        color: $grey;
+        font-size: 40px;
+      }
+      p {
+        color: $light-grey;
+        font-size: 24px;
+      }
     }
     &__img {
 
@@ -307,18 +319,16 @@ footer {
 
     }
     &__map {
-      border: 1px solid $black;
       iframe {
         width:100%;
       }
     }
     &__info {
-      border: 1px solid $black;
       background-image: url("../img/info_img.jpg");
       background-size: cover;
       div {
         background-color: $black;
-        
+
       }
     }
   }
@@ -329,7 +339,18 @@ footer {
       grid-template-columns: 1fr 1fr 1fr;
     }
   }
-
+//----------------------------------------page-menu---------------------------------
+  .page-menu {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+    text-align: center;
+    margin: 40px 0;
+    &__div {
+      border: 1px solid $grey;
+      padding: 10px;
+    }
+  }
 }
 /*-----------------------------------media screen pc larg--------------------------*/
 @media (min-width: 1201px) {
