--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -70,7 +70,7 @@ main {
 .agencies {
   display: grid;
   &__info {
-    background-image: url("../img/image_back_1.jpg");
+    background-image: url("../img/lucarno_image.jpg");
     background-repeat: no-repeat;
   }
   &__img {
@@ -330,6 +330,9 @@ main {
 
 /*----------------------------------media screen pc normal-------------------------*/
 @media (min-width:921px) {
+  .hover {
+    border-bottom: 1px solid $white;
+  }
   .center {
     margin:0px auto;
     width: 1200px;
@@ -414,10 +417,9 @@ main {
     grid-template-columns: repeat(2, 1fr);
     box-shadow: 0 0 20px $black;
     &-background {
-      background-color: $white;
-      opacity: 0.8;
       height: 100%;
       padding: 70px;
+      color: $white;
     }
     &__info:hover {
       text-decoration: none;
@@ -426,11 +428,9 @@ main {
       text-align: center;
 
       h3 {
-        color: $grey;
         font-size: 40px;
       }
       p {
-        color: $light-grey;
         font-size: 24px;
       }
     }
@@ -516,6 +516,37 @@ main {
         margin: 0 20px 20px 20px;
         color: $light-grey;
         font-weight: 600;
+      }
+      .red {
+        color: $red;
+      }
+    }
+  }
+//-----------------------PC----------------lucarno page--------------------
+  .page-lucarno {
+    &__menu {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-gap: 10px;
+    }
+    &__div {
+      display: grid;
+      grid-template-columns: 40% 60%;
+      grid-gap: 10px;
+      border: 1px solid $light-grey-border;
+      padding: 10px;
+      h3 {
+        margin: 0px 0 0 0;
+        color: $grey;
+        font-size: 20px;
+      }
+      p {
+        font-size: 14px;
+        margin: 0 0 3px 0;
+        color: $light-grey;
+      }
+      img {
+        width: 100%;
       }
       .red {
         color: $red;
