--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,8 @@ header, main, footer {
   background-image: url("../img/background_img_1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 390px; }
+  min-height: 390px;
+  background-position: center; }
   .header__wrapper {
     display: -ms-grid;
     display: grid;
@@ -29,9 +30,9 @@ header, main, footer {
     -ms-grid-column-span: 6;
     grid-column: 4/10;
     margin-top: 40px;
-    padding: 20px; }
+    text-align: center; }
     .header__logo img {
-      width: 100%; }
+      width: 180px; }
   .header__menu {
     -ms-grid-column: 1;
     -ms-grid-column-span: 12;
@@ -79,7 +80,7 @@ header, main, footer {
   text-align: center;
   position: relative;
   font-size: 50px;
-  top: 122px; }
+  top: 140px; }
 
 .back_image_1, .back_image_2 {
   min-height: 390px;
@@ -223,7 +224,20 @@ footer {
     .contact_us__column input[type=submit]:hover {
       background-color: #768fff; }
 
-/*--------------------------media screen mobile rotate------------------------*/
+/*-------------------------media mobile screen------------------------*/
+@media (min-width: 300px) and (max-width: 340px) {
+  .header__logo img {
+    width: 150px; }
+  .header--title {
+    top: 179px;
+    font-size: 38px; }
+  .page-menu__div h3 {
+    font-size: 18px; }
+  .page-menu__div p {
+    font-size: 14px;
+    margin: 0 0 20px 0; } }
+
+/*--------------------------media screen tablet------------------------*/
 @media (min-width: 768px) {
   #header__menu {
     display: block; }
@@ -236,7 +250,7 @@ footer {
     width: 730px; }
   .header--title {
     font-size: 85px;
-    top: 44px; }
+    top: 21px; }
   .header {
     min-height: 940px;
     background-position: center; }
@@ -422,7 +436,7 @@ footer {
     width: 990px; }
   .header--title {
     font-size: 100px;
-    top: 205px; }
+    top: 201px; }
   .header {
     min-height: 940px; }
     .header__wrapper {
@@ -437,9 +451,10 @@ footer {
       grid-column: 1/3;
       grid-row: auto;
       padding: 20px 0 0 20px;
-      width: 80%; }
+      width: 80%;
+      margin: 0px; }
       .header__logo img {
-        width: 100%; }
+        width: 150px; }
     .header__menu {
       position: inherit; }
       .header__menu ul {
@@ -555,9 +570,12 @@ footer {
   .center {
     width: 1200px; }
   .header--title {
-    top: 173px; }
+    top: 165px; }
   .header__logo {
-    padding: 0 0 0 50px; }
+    padding: 0 0 0 50px;
+    margin-top: 10px; }
+    .header__logo img {
+      width: 200px; }
   .header__social {
     -ms-grid-column: 11;
     -ms-grid-column-span: 2;
