--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,4 @@
-
-$breakpoint-xs: 560px;
+$breakpoint-xs: 500px;
 $breakpoint-sm: 768px;
 $breakpoint-md: 1025px;
 $breakpoint-lg: 1300px;
@@ -36,6 +35,7 @@ header, main, footer {
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 390px;
+  background-position: center;
   &__wrapper{
     display: grid;
     grid-template-columns: repeat(12, 1fr);
@@ -44,9 +44,10 @@ header, main, footer {
   &__logo {
     grid-column: 4/10;
     margin-top: 40px;
-    padding: 20px;
+    text-align:center;
+    //padding: 20px;
     img {
-      width:100%;
+      width:180px;
     }
   }
   &__menu {
@@ -106,7 +107,7 @@ header, main, footer {
   text-align: center;
   position: relative;
   font-size: 50px;
-  top: 122px
+  top: 140px
 }
 .back_image_1, .back_image_2 {
   min-height: 390px;
@@ -284,7 +285,26 @@ footer {
   }
 }
 
-/*--------------------------media screen mobile rotate------------------------*/
+/*-------------------------media mobile screen------------------------*/
+@media (min-width: 300px) and (max-width: 340px) {
+  .header__logo img {
+    width: 150px;
+  }
+  .header--title {
+    top: 179px;
+    font-size: 38px;
+  }
+  .page-menu__div {
+    h3 {
+      font-size: 18px;
+    }
+    p {
+      font-size: 14px;
+      margin: 0 0 20px 0;
+    }
+  }
+}
+/*--------------------------media screen tablet------------------------*/
 @media (min-width:$breakpoint-sm) {
   #header__menu {
     display: block;
@@ -301,7 +321,7 @@ footer {
   }
   .header--title {
     font-size: 85px;
-    top: 44px
+    top: 21px
   }
   .header {
     min-height: 940px;
@@ -550,7 +570,7 @@ footer {
   }
   .header--title {
     font-size: 100px;
-    top: 205px
+    top: 201px
   }
   .header {
     min-height: 940px;
@@ -564,8 +584,9 @@ footer {
       grid-row:auto;
       padding: 20px 0 0 20px;
       width: 80%;
+      margin: 0px;
       img {
-        width: 100%;
+        width: 150px;
       }
     }
     &__menu {
@@ -796,7 +817,7 @@ footer {
   }
   .header--title {
     //font-size: 100px;
-    top: 173px
+    top: 165px
   }
   .header {
     //min-height: 940px;
@@ -808,7 +829,11 @@ footer {
     &__logo {
       //grid-column: 1/3;
       padding: 0 0 0 50px;
+      margin-top: 10px;
       //width: 80%;
+      img {
+        width: 200px;
+      }
     }
     &__menu {
       //grid-column: 3/11;
